objects/Infinity_Calculator__c.object
<CustomObject>
    <description>Calculator for the Mastermind group.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Infinity Calculator</relationshipLabel>
        <relationshipName>Infinity_Calculator</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Infinity_Income_Needed__c</fullName>
        <formula>Total_Calculated_Monthly_Expenses__c  -  Total_Monthly_Infinity_Income_Calculated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Infinity Income Needed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alimony__c</fullName>
        <label>Alimony</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auto_Expense__c</fullName>
        <label>Auto Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auto_Insurance__c</fullName>
        <label>Auto Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bus_Expense__c</fullName>
        <label>Bus Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cable_Bill__c</fullName>
        <label>Cable Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Gasoline__c</fullName>
        <label>Car Gasoline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <label>Cell Phone</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charity_Church__c</fullName>
        <label>Charity Church</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Child_Support__c</fullName>
        <label>Child Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Payments__c</fullName>
        <label>Credit Card Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_Expenses__c</fullName>
        <formula>( Total_Calculated_Monthly_Expenses__c  * 12 )  / 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_Infinity_Income_Needed__c</fullName>
        <formula>( Total_Calculated_Monthly_Expenses__c  * 12 )  / 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Infinity Income Needed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_Infinity_Income__c</fullName>
        <formula>(  Total_Monthly_Infinity_Income_Calculated__c  * 12 )  / 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Infinity Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dental_Expenses__c</fullName>
        <label>Dental Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Difference__c</fullName>
        <description>The difference between Daily Expenses - Daily Infinity Income</description>
        <formula>Daily_Expenses__c  -  Daily_Infinity_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dry_Cleaning_Laundry__c</fullName>
        <label>Dry Cleaning Laundry</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Home_Insurance__c</fullName>
        <label>Home Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Infinity_Net_Worth_2__c</fullName>
        <description>This used in a workflow to hold the value of all of the calculations. Without this field, there are too many to calculation and the formula will not work.</description>
        <label>Infinity Net Worth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Infinity_Net_Worth_Number__c</fullName>
        <description>This is where the calculations are made and then they are saved to Infinity Net Worth 2.</description>
        <formula>IF( Difference__c  &gt; 0, Traditional_Net_Worth_2__c   /  VALUE(LEFT(TEXT(Difference__c), ((FIND(&quot;.&quot;, TEXT(Difference__c), 0))+2))) , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Infinity Net Worth Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Infinity_Net_Worth__c</fullName>
        <formula>IF(Difference__c &lt;= 0,&quot;Infinity&quot;, LEFT(TEXT(Infinity_Net_Worth_2__c), ((FIND(&quot;.&quot;, TEXT(Infinity_Net_Worth_2__c), 0))-1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This equals the amount of days that the client can live without working</inlineHelpText>
        <label>Infinity Net Worth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installment_Contract_Payment__c</fullName>
        <label>Installment Contract Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internet__c</fullName>
        <label>Internet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Landscaping__c</fullName>
        <label>Landscaping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Life_Insurance__c</fullName>
        <label>Life Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Link_for_Communities__c</fullName>
        <formula>&quot;https://platinum.force.com/aba/s/detail/&quot;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link for Communities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Expenses__c</fullName>
        <label>Medical Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Alimony__c</fullName>
        <label>Minimum Alimony</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Auto_Expense__c</fullName>
        <label>Minimum Auto Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Auto_Insurance__c</fullName>
        <label>Minimum Auto Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Bus_Expense__c</fullName>
        <label>Minimum Bus Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Cable_Bill__c</fullName>
        <label>Minimum Cable Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Car_Gasoline__c</fullName>
        <label>Minimum Car Gasoline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Cell_Phone__c</fullName>
        <label>Minimum Cell Phone</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Charity_Church__c</fullName>
        <label>Minimum Charity Church</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Child_Care__c</fullName>
        <label>Minimum Child Care</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Child_Support__c</fullName>
        <label>Minimum Child Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Credit_Card_Payments__c</fullName>
        <label>Minimum Credit Card Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Dental_Expenses__c</fullName>
        <label>Minimum Dental Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Dry_Cleaning_Laundry__c</fullName>
        <label>Minimum Dry Cleaning Laundry</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Food__c</fullName>
        <label>Minimum Food</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Home_Insurance__c</fullName>
        <label>Minimum Home Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Household_Repairs__c</fullName>
        <label>Minimum Household Repairs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Installment_Contract_Payment__c</fullName>
        <label>Minimum Installment Contract Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Internet__c</fullName>
        <label>Minimum Internet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Landscaping__c</fullName>
        <label>Minimum Landscaping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Life_Insurance__c</fullName>
        <label>Minimum Life Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Medical_Expenses__c</fullName>
        <label>Minimum Medical Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Mortgage_Payment__c</fullName>
        <label>Minimum Mortgage Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Other_Expenses__c</fullName>
        <label>Minimum Other Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Other_Taxes__c</fullName>
        <label>Minimum Other Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Personal_Maintenance__c</fullName>
        <label>Minimum Personal Maintenance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Property_Taxes__c</fullName>
        <label>Minimum Property Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Recreation__c</fullName>
        <label>Minimum Recreation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Rent_Payment__c</fullName>
        <label>Minimum Rent Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_School_Expenses__c</fullName>
        <label>Minimum School Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Train_Expense__c</fullName>
        <label>Minimum Train Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Utilities__c</fullName>
        <label>Minimum Utilities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Vacation__c</fullName>
        <label>Minimum Vacation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Money_Available_For_Investment__c</fullName>
        <formula>Total_Monthly_Cash_Available_del__c  +  Total_Calculated_All_Fat__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Money Available For Investment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Expenses__c</fullName>
        <label>Other Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_Taxes__c</fullName>
        <label>Property Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>School_Expenses__c</fullName>
        <label>School Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spouse_Monthly_Infinity_Income_Dividen__c</fullName>
        <label>Spouse Monthly Infinity Income Dividends</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spouse_Monthly_Infinity_Income_Interes__c</fullName>
        <label>Spouse Monthly Infinity Income Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spouse_Monthly_Infinity_Income_Rents__c</fullName>
        <label>Spouse Monthly Infinity Income Rents</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spouse_Monthly_Infinity_Income_Royalti__c</fullName>
        <label>Spouse Monthly Infinity Income Royalties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spouse_Monthly_Infinity_Income_Short_T__c</fullName>
        <label>Spouse Monthly Infinity Income Short Ter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TestForm__c</fullName>
        <formula>Traditional_Net_Worth_Calculated__c /  Difference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TestForm</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Calculated_All_Fat__c</fullName>
        <formula>Minimum_Rent_Payment__c  +  Minimum_Mortgage_Payment__c  +  Minimum_Household_Repairs__c  +  Minimum_Utilities__c  +   Minimum_Food__c  +   Minimum_Auto_Expense__c  +  Minimum_Bus_Expense__c  +  Minimum_Train_Expense__c  +  Minimum_Credit_Card_Payments__c  +  Minimum_Installment_Contract_Payment__c  +  Minimum_Alimony__c  +  Minimum_Child_Support__c  +  Minimum_Home_Insurance__c  +  Minimum_Life_Insurance__c  +  Minimum_Auto_Insurance__c  +  Minimum_Property_Taxes__c  +  Minimum_Other_Taxes__c  +  Minimum_Personal_Maintenance__c  +  Minimum_Recreation__c  +  Minimum_Child_Care__c  +  Minimum_Charity_Church__c  +  Minimum_Medical_Expenses__c  +  Minimum_Dental_Expenses__c  +  Minimum_School_Expenses__c  +  Minimum_Car_Gasoline__c  +  Minimum_Cell_Phone__c  +  Minimum_Cable_Bill__c  +  Minimum_Internet__c  +  Minimum_Vacation__c  +  Minimum_Landscaping__c  +  Minimum_Dry_Cleaning_Laundry__c  +  Minimum_Other_Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Calculated All Fat</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Calculated_Assets__c</fullName>
        <formula>checking_accounts__c  +  savings_accounts__c  +  stock_non_ira_or_401k__c  +  bonds__c  +  cash_value_of_life_insurance__c  +  accounts_receivables__c  +  tax_refund__c  +  autos__c  +  boats__c  +  recreational_vehicles__c  +  home__c  +   vacation_homes__c  +  rental_real_estate__c  +  vested_pension__c  +  ira__c  +  X401k__c  +  home_furnishings__c  +  antiques__c  +  collectibles__c  +  other_asset__c  +  other_asset_1__c  +  other_asset_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Calculated Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Calculated_Income_for_Both_Spouses__c</fullName>
        <formula>your_take_home_pay__c  +  spouse_take_home_pay__c  +  your_commissions__c  +  spouse_commissions__c  +  your_tips__c  +  spouse_tips__c  +  your_bonuses__c  +  spouse_bonuses__c  +  your_net_profit_from_business__c  +  spouse_net_profit_from_business__c  +  your_interest__c  +  spouse_interest__c  +  your_dividends__c  +  spouse_dividends__c  +  your_net_proceeds_from_sales_of_assets__c  +  spouse_net_proceeds_from_sales_of_asse__c  +  your_net_profit_from_rental_properties__c  +  spouse_net_profit_from_rental_properti__c  +  your_income_from_alimony__c  +  spouse_income_from_alimony__c  +  your_social_security_benefits__c  +  spouse_social_security_benefits__c  +  your_ira_income__c  +  spouse_ira_income__c  +  your_pension_income__c  +  spouse_pension_income__c  +  your_veterans_benefits__c  +  spouse_veterans_benefits__c  +  your_unemployment_benefits__c  +  spouse_unemployment_benefits__c  +  your_royalties__c  +  spouse_royalties__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Calculated Income for Both Spouses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Calculated_Liabilities__c</fullName>
        <formula>mortgage_personal_home__c  +  mortgage_vacation_home__c  +   mortgages_on_rentals__c  +  credit_card_balances__c  +  doctor_bills__c  +  other_revolving_credit__c  +  contracts_payable__c  +  taxes_payable__c  +  auto_loans__c  +  boats__c  +  rv_loans__c  +  judgement_payable__c  +  contingent_liabilities__c  +  college_loans__c  +  other_liabilities__c  +  other_liabilities_1__c  +  other_liabilities_2__c  + other_liabilities_3__c  +  other_liabilities_4__c  +  other_liabilities_5__c  +  other_liabilities_6__c  +   other_liabilities_7__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Calculated Liabilities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Calculated_Min_Expenses__c</fullName>
        <formula>Total_Calculated_Monthly_Expenses__c  -  Total_Calculated_All_Fat__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Also known as Monthly Income Needed To Live</inlineHelpText>
        <label>Total Calculated Min Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Calculated_Monthly_Expenses__c</fullName>
        <formula>rent_payment__c  +  other_taxes__c  +  mortgage_payment__c  +  personal_maintenance__c  +  household_repairs__c  +  recreation__c  +  utilities__c  +  child_care__c  +  food__c  +  Charity_Church__c  +  Auto_Expense__c  +  Medical_Expenses__c  +  Bus_Expense__c  +  Dental_Expenses__c  +  Train_Expense__c  +  School_Expenses__c  +  Credit_Card_Payments__c  +  Car_Gasoline__c  +  Installment_Contract_Payment__c  +   Cell_Phone__c  +  Alimony__c  +  Cable_Bill__c  +  Child_Support__c  +  Internet__c  +   Home_Insurance__c  +  Vacation__c  +  Life_Insurance__c  +  Landscaping__c  +  Auto_Insurance__c  +  Dry_Cleaning_Laundry__c  +  Other_Expenses__c  +  Property_Taxes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Calculated Monthly Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Cash_Available_del__c</fullName>
        <formula>Total_Calculated_Income_for_Both_Spouses__c  -  Total_Calculated_Monthly_Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Also known as Net Income</inlineHelpText>
        <label>Total Monthly Cash Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Infinity_Income_Calculated__c</fullName>
        <formula>Your_Monthly_Infinity_Income_Rents__c  +  Spouse_Monthly_Infinity_Income_Rents__c  +  Your_Monthly_Infinity_Income_Royalties__c  +  Spouse_Monthly_Infinity_Income_Royalti__c  +  Your_Monthly_Infinity_Income_Dividends__c  +  Spouse_Monthly_Infinity_Income_Dividen__c  +  Your_Monthly_Infinity_Income_Interest__c  +  Spouse_Monthly_Infinity_Income_Interes__c  +  Your_Monthly_Infinity_Income_Short_Ter__c  +  Spouse_Monthly_Infinity_Income_Short_T__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Monthly Infinity Income Calculated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Traditional_Net_Worth_2__c</fullName>
        <label>Traditional Net Worth 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Traditional_Net_Worth_Calculated__c</fullName>
        <formula>Total_Calculated_Assets__c  -  Total_Calculated_Liabilities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Traditional Net Worth Calculated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Train_Expense__c</fullName>
        <label>Train Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vacation__c</fullName>
        <label>Vacation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X401k__c</fullName>
        <label>401K</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Your_Monthly_Infinity_Income_Dividends__c</fullName>
        <label>Your Monthly Infinity Income Dividends</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Your_Monthly_Infinity_Income_Interest__c</fullName>
        <label>Your Monthly Infinity Income Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Your_Monthly_Infinity_Income_Rents__c</fullName>
        <label>Your Monthly Infinity Income Rents</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Your_Monthly_Infinity_Income_Royalties__c</fullName>
        <label>Your Monthly Infinity Income Royalties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Your_Monthly_Infinity_Income_Short_Ter__c</fullName>
        <label>Your Monthly Infinity Income Short Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>accounts_receivables__c</fullName>
        <label>Accounts Receivables</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>antiques__c</fullName>
        <label>Antiques</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>auto_loans__c</fullName>
        <label>Auto Loans</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>autos__c</fullName>
        <label>Autos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>boat_loans__c</fullName>
        <label>Boat Loans</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>boats__c</fullName>
        <label>Boats</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bonds__c</fullName>
        <label>Bonds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cash_value_of_life_insurance__c</fullName>
        <label>Cash Value of Life Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>checking_accounts__c</fullName>
        <label>Checking Accounts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>child_care__c</fullName>
        <label>Child Care</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>collectibles__c</fullName>
        <label>Collectibles</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>college_loans__c</fullName>
        <label>College Loans</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>contingent_liabilities__c</fullName>
        <label>Contingent Liabilities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>contracts_payable__c</fullName>
        <label>Contracts Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>credit_card_balances__c</fullName>
        <label>Credit Card Balances</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>doctor_bills__c</fullName>
        <label>Doctor Bills</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>first_name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>food__c</fullName>
        <label>Food</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>home__c</fullName>
        <label>Home</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>home_furnishings__c</fullName>
        <label>Home Furnishings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>household_repairs__c</fullName>
        <label>Household Repairs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ira__c</fullName>
        <label>Ira</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>judgement_payable__c</fullName>
        <label>Judgement Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>last_name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mortgage_payment__c</fullName>
        <label>Mortgage Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>mortgage_personal_home__c</fullName>
        <label>Mortgage Personal Home</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>mortgage_vacation_home__c</fullName>
        <label>Mortgage Vacation Home</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>mortgages_on_rentals__c</fullName>
        <label>Mortgages On Rentals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>other_asset_1__c</fullName>
        <label>Other Asset 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>other_asset_2__c</fullName>
        <label>Other Asset 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>other_asset__c</fullName>
        <label>Other Asset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>other_liabilities_1__c</fullName>
        <label>Other Liabilities 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>other_liabilities_2__c</fullName>
        <label>Other Liabilities 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>other_liabilities_3__c</fullName>
        <label>Other Liabilities 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>other_liabilities__c</fullName>
        <label>Other Liabilities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>other_revolving_credit__c</fullName>
        <label>Other Revolving Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>other_taxes__c</fullName>
        <label>Other Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>personal_maintenance__c</fullName>
        <label>Personal Maintenance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>recreation__c</fullName>
        <label>Recreation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>recreational_vehicles__c</fullName>
        <label>Recreational Vehicles</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rent_payment__c</fullName>
        <label>Rent Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rental_real_estate__c</fullName>
        <label>Rental Real Estate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rv_loans__c</fullName>
        <label>Rv Loans</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>savings_accounts__c</fullName>
        <label>Savings Accounts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>spouse_bonuses__c</fullName>
        <label>Spouse Bonuses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>